--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -3293,6 +3293,102 @@
         </div>
     </div>
 </div>
+                <h2 id="ucuncu-kisim" class="section-title mt-16 mb-6">
+    ÜÇÜNCÜ KISIM: CUMHURİYETİN TEMEL ORGANLARI
+</h2>
+<div class="highlight-box mt-4 mb-8">
+    <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Kısım Analizi</h6>
+    <p style="text-align: justify;" class="text-sm">Değerli aday, Anayasa'nın en hacimli ve en önemli bölümüne geldik. "Genel Esaslar" ile devletin temelini attık, "Temel Haklar" ile birey-devlet ilişkisini kurduk. Şimdi ise bizzat <strong>devlet mekanizmasını oluşturan üç temel gücün</strong> (erk'in) nasıl çalıştığını inceleyeceğiz. Bu kısım, devletin motorunu, direksiyonunu ve fren sistemini anlamamızı sağlayacak.</p>
+</div>
+
+<section aria-labelledby="bolum-yasama">
+    <h3 id="bolum-yasama" class="subsection-title text-2xl font-bold mt-12 mb-4">
+        BİRİNCİ BÖLÜM: Yasama
+    </h3>
+    <div class="highlight-box mt-4 mb-8">
+        <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Bölüm Analizi</h6>
+        <p style="text-align: justify;" class="text-sm">Değerli aday, "Yasama", en basit tanımıyla "yasa yapma" yani kanun koyma yetkisidir. Anayasamıza göre bu yetki, Türk Milleti adına <strong>Türkiye Büyük Millet Meclisi (TBMM)</strong> tarafından kullanılır. Bu bölümde, Meclis'in nasıl kurulduğunu (üye sayısı), milletvekillerinin hangi şartları taşıması gerektiğini, Meclis'in görev ve yetkilerini ve kanunların nasıl yapıldığını detaylıca inceleyeceğiz.</p>
+    </div>
+
+    <!-- Madde 75 -->
+    <details id="madde-75" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 75 – Türkiye Büyük Millet Meclisinin Kuruluşu
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Türkiye Büyük Millet Meclisi <strong>genel oyla seçilen altıyüz milletvekilinden oluşur.</strong>
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm">Bu madde, Meclis'in "nüfus cüzdanındaki" en temel bilgiyi verir. Bilmeniz gereken iki kritik ve net bilgi vardır:</p>
+                <ul class="list-disc pl-5 space-y-1 text-sm">
+                    <li><strong>Üye Sayısı:</strong> TBMM, toplam <strong>altı yüz (600)</strong> milletvekilinden oluşur.</li>
+                    <li><strong>Seçim Yöntemi:</strong> Bu 600 milletvekili, <strong>genel oyla</strong> seçilir.</li>
+                </ul>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi:</h6>
+                <p style="text-align: justify;" class="text-sm">Bu maddedeki 600 sayısı, sınavda doğrudan sorulabilecek en net bilgilerden biridir. Bu sayının 2017 Anayasa değişikliğiyle (550'den 600'e) arttığını bilmek, güncel bilgiye hakimiyetinizi gösterir.</p>
+            </div>
+        </div>
+    </details>
+
+    <!-- Madde 76 -->
+    <details id="madde-76" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 76 – Milletvekili Seçilme Yeterliliği
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                <strong>Onsekiz yaşını dolduran her Türk</strong> milletvekili seçilebilir.
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                En az ilkokul mezunu olmayanlar, kısıtlılar, askerlikle ilişiği olanlar, kamu hizmetinden yasaklılar, <strong>taksirli suçlar hariç toplam bir yıl veya daha fazla hapis</strong> (...) cezasına hüküm giymiş olanlar; <strong>zimmet, ihtilas, irtikap, rüşvet, hırsızlık, dolandırıcılık, sahtecilik, inancı kötüye kullanma, dolanlı iflas gibi yüz kızartıcı suçlarla, kaçakçılık, Resmî ihale ve alım satımlara fesat karıştırma, Devlet sırlarını açığa vurma, terör eylemlerine katılma ve bu gibi eylemleri tahrik ve teşvik suçlarından biriyle hüküm giymiş olanlar, affa uğramış olsalar bile milletvekili seçilemezler.</strong>
+            </blockquote>
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+                <strong>Hakimler ve savcılar, yüksek yargı organları mensupları, yükseköğretim kurumlarındaki öğretim elemanları, Yükseköğretim Kurulu üyeleri, kamu kurum ve kuruluşlarının memur statüsündeki görevlileri ile yaptıkları hizmet bakımından işçi niteliği taşımayan diğer kamu görevlileri ve Silahlı Kuvvetler mensupları, görevlerinden çekilmedikçe, aday olamazlar ve milletvekili seçilemezler.</strong>
+            </blockquote>
+            <div class="highlight-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+                <p style="text-align: justify;" class="text-sm mb-2">Bu madde, kimlerin milletvekili olabileceğinin ve olamayacağının çerçevesini çizer. Maddeyi üç ana başlıkta incelemek, öğrenmeyi kolaylaştıracaktır:</p>
+                <ol class="list-decimal pl-5 space-y-2 text-sm">
+                    <li><strong>Olumlu Şartlar (Bunlar olmadan olmaz):</strong>
+                        <ul class="list-disc pl-5 mt-1">
+                            <li>Türk vatandaşı olmak</li>
+                            <li>On sekiz (18) yaşını doldurmuş olmak</li>
+                            <li>En az ilkokul mezunu olmak</li>
+                        </ul>
+                    </li>
+                    <li><strong>Seçilmeye Engel Haller (Bu durumlardaysan asla olmaz):</strong>
+                         <ul class="list-disc pl-5 mt-1">
+                            <li>Kısıtlı olmak</li>
+                            <li>Askerlikle ilişiği olmak</li>
+                            <li>Kamu hizmetinden yasaklı olmak</li>
+                            <li>Belirli mahkumiyetleri olmak (Aşağıdaki "Sınav Stratejisi"ne bakınız)</li>
+                        </ul>
+                    </li>
+                    <li><strong>Aday Olmak İçin Görevinden Çekilmesi Gerekenler:</strong>
+                         <ul class="list-disc pl-5 mt-1">
+                            <li>Hâkimler ve savcılar, Yüksek yargı mensupları</li>
+                            <li>Akademisyenler ve YÖK üyeleri</li>
+                             <li>Memurlar ve işçi sayılmayan diğer kamu görevlileri</li>
+                            <li>Silahlı Kuvvetler mensupları</li>
+                        </ul>
+                    </li>
+                </ol>
+            </div>
+            <div class="strategy-box mt-4">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Mahkumiyet Engelleri ve İstifa Kuralı</h6>
+                <p style="text-align: justify;" class="text-sm mb-2"><strong>Mahkumiyet Engeli:</strong> İki türdür.<br>
+                <strong>1) Süreye Bağlı:</strong> Taksirli suçlar hariç, toplam 1 yıl veya daha fazla hapis cezası almak.<br>
+                <strong>2) Suç Türüne Bağlı ("Kara Liste"):</strong> Yüz kızartıcı suçlar, kaçakçılık, terör gibi suçlardan hüküm giyenler, cezaları ne olursa olsun, <strong>affa uğramış olsalar bile ASLA</strong> milletvekili seçilemezler. Bu "affa rağmen yasak" kuralı en önemli tuzaktır!</p>
+                <p style="text-align: justify;" class="text-sm mt-2"><strong>İstifa Kuralı:</strong> "Aşağıdakilerden hangisi milletvekili adayı olmak için görevinden çekilmek zorunda değildir?" sorusunun cevabı genellikle bu listede olmayan <strong>işçiler, avukatlar, esnaflar</strong> gibi meslek gruplarıdır.</p>
+            </div>
+        </div>
+    </details>
+</section>
+                
                 
 </section>
  
