--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -3388,6 +3388,107 @@
         </div>
     </details>
 </section>
+                <!-- Madde 77 -->
+<details id="madde-77" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 77 – Türkiye Büyük Millet Meclisi ve Cumhurbaşkanının Seçim Dönemi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi ve Cumhurbaşkanlığı seçimleri <strong>beş yılda bir aynı günde yapılır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Süresi biten milletvekili yeniden seçilebilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Cumhurbaşkanlığı seçiminde birinci oylamada gerekli çoğunluğun sağlanamaması halinde 101 inci maddedeki usule göre ikinci oylama yapılır.
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, 2017 değişikliği ile gelen Cumhurbaşkanlığı Hükümet Sistemi'nin temel seçim takvimini belirler. Bilmeniz gereken üç temel kural vardır:</p>
+          <ul class="list-disc pl-5 space-y-1 text-sm">
+            <li><strong>Seçim Sıklığı ve Zamanlaması:</strong> TBMM ve Cumhurbaşkanlığı seçimleri, birlikte, <strong>beş (5) yılda bir aynı günde</strong> yapılır.</li>
+            <li><strong>Milletvekilinin Tekrar Seçilmesi:</strong> Süresi biten bir milletvekili, herhangi bir sınırlama olmaksızın yeniden seçilebilir.</li>
+            <li><strong>Cumhurbaşkanlığı İkinci Tur:</strong> Seçimin ilk turunda salt çoğunluk (%50+1) sağlanamazsa, Anayasa'nın 101. maddesinde belirtilen usule göre ikinci tura gidilir.</li>
+          </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 78 -->
+<details id="madde-78" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 78 – Seçimlerin Geriye Bırakılması ve Ara Seçimler
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            <strong>Savaş sebebiyle</strong> yeni seçimlerin yapılmasına imkan görülmezse, Türkiye Büyük Millet Meclisi, seçimlerin <strong>bir yıl geriye bırakılmasına</strong> karar verebilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Geri bırakma sebebi ortadan kalkmamışsa, erteleme kararındaki usule göre bu işlem tekrarlanabilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyeliklerinde boşalma olması halinde, ara seçime gidilir. Ara seçim, <strong>her seçim döneminde bir defa yapılır</strong> ve <strong>genel seçimden otuz ay geçmedikçe ara seçime gidilemez.</strong> Ancak, boşalan üyeliklerin sayısı, <strong>üye tamsayısının yüzde beşini bulduğu hallerde, ara seçimlerinin üç ay içinde yapılmasına</strong> karar verilir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            <strong>Genel seçimlere bir yıl kala, ara seçimi yapılamaz.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yukarıda yazılı hallerden ayrı olarak, <strong>bir ilin veya seçim çevresinin, Türkiye Büyük Millet Meclisinde üyesinin kalmaması halinde</strong>, boşalmayı takip eden <strong>doksan günden sonraki ilk Pazar günü ara seçim yapılır.</strong> Bu fıkra gereği yapılacak seçimlerde Anayasanın 127 nci maddesinin üçüncü fıkrası hükmü uygulanmaz.
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Ara Seçim Labirenti</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">Ara seçim kuralları çok sayıda istisna içerdiği için sınavların favorisidir. Bu labirentten çıkmak için aşağıdaki yol haritasını izleyin:</p>
+          <ul class="list-disc pl-5 text-sm space-y-2">
+            <li><strong>Ana Kural:</strong> Bir seçim döneminde (5 yılda) <strong>sadece bir defa</strong> ara seçim yapılır.</li>
+            <li><strong>Zamanlama Kuralı 1 (Başlangıç):</strong> Genel seçimden itibaren <strong>30 ay geçmedikçe</strong> ara seçime gidilemez.</li>
+            <li><strong>Zamanlama Kuralı 2 (Bitiş):</strong> Genel seçimlere <strong>1 yıl veya daha az</strong> bir süre kala ara seçim yapılamaz.</li>
+            <li><strong>İSTİSNA 1 ("%5 Kuralı"):</strong> Boşalan üyelik sayısı <strong>%5'i (30 MV) bulursa</strong>, "bir defa yapılır" ve "30 ay geçmedikçe" kuralları işlemez. Ara seçimin <strong>3 ay içinde</strong> yapılması zorunludur. (Ancak 1 yıl kala yasağı devam eder).</li>
+            <li><strong>İSTİSNA 2 ("Temsilde Sıfır" Kuralı):</strong> Bir ilin veya seçim çevresinin <strong>TBMM'de hiç üyesi kalmamışsa</strong>, yukarıdaki TÜM KURALLAR (bir defa, 30 ay, 1 yıl) ortadan kalkar. Boşalmayı takip eden <strong>90 günden sonraki ilk Pazar</strong> günü zorunlu olarak ara seçim yapılır.</li>
+           </ul>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 79 -->
+<details id="madde-79" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 79 – Seçimlerin Genel Yönetim ve Denetimi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Seçimler, <strong>yargı organlarının genel yönetim ve denetimi altında yapılır.</strong> 
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Seçimlerin başlamasından bitimine kadar, seçimin düzen içinde yönetimi ve dürüstlüğü ile ilgili bütün işlemleri yapma ve yaptırma, seçim süresince ve seçimden sonra seçim konularıyla ilgili bütün yolsuzlukları, şikayet ve itirazları inceleme ve kesin karara bağlama ve Türkiye Büyük Millet Meclisi üyelerinin seçim tutanaklarını ve Cumhurbaşkanlığı seçim tutanaklarını kabul etme görevi Yüksek Seçim Kurulunundur. <strong>Yüksek Seçim Kurulunun kararları aleyhine başka bir mercie başvurulamaz.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yüksek Seçim Kurulunun ve diğer seçim kurullarının görev ve yetkileri kanunla düzenlenir.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yüksek Seçim Kurulu <strong>yedi asıl ve dört yedek üyeden oluşur.</strong> Üyelerin <strong>altısı Yargıtay, beşi Danıştay</strong> Genel Kurullarınca kendi üyeleri arasından üye tamsayılarının salt çoğunluğunun gizli oyu ile seçilir. Bu üyeler, salt çoğunluk ve gizli oyla aralarından bir başkan ve bir başkanvekili seçerler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Yüksek Seçim Kuruluna Yargıtay ve Danıştaydan seçilmiş üyeler arasından ad çekme ile ikişer yedek üye ayrılır. Yüksek Seçim Kurulu Başkanı ve Başkanvekili ad çekmeye girmezler.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Anayasa değişikliklerine ilişkin kanunların halkoyuna sunulması, Cumhurbaşkanının halk tarafından seçilmesi işlemlerinin genel yönetim ve denetimi de milletvekili seçimlerinde uygulanan hükümlere göre olur.
+        </blockquote>
+        <div class="highlight-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Anlamlandırma Kutusu: YSK'nın Kimlik Kartı</h6>
+            <div class="overflow-x-auto">
+                <table class="w-full text-sm border-collapse">
+                    <tbody class="bg-white">
+                        <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-medium">Görevi</td><td class="border border-sky-200 p-2">Seçimlerin Yargısal Yönetimi ve Denetimi</td></tr>
+                        <tr><td class="border border-sky-200 p-2 font-medium">Üye Sayısı</td><td class="border border-sky-200 p-2">7 Asıl, 4 Yedek (Toplam 11 Üye)</td></tr>
+                        <tr class="bg-sky-50"><td class="border border-sky-200 p-2 font-medium">Üyelerin Kaynağı</td><td class="border border-sky-200 p-2">6'sı Yargıtay'dan, 5'i Danıştay'dan seçilir.</td></tr>
+                        <tr><td class="border border-sky-200 p-2 font-medium">Kararlarının Niteliği</td><td class="border border-sky-200 p-2"><strong>Kesindir</strong>, aleyhine yargı yolu kapalıdır.</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</details>
                 
                 
 </section>
