--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -3489,7 +3489,193 @@
         </div>
     </div>
 </details>
-                
+                <!-- Madde 80 -->
+<details id="madde-80" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 80 – Milletin Temsili
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyeleri, <strong>seçildikleri bölgeyi veya kendilerini seçenleri değil, bütün Milleti temsil ederler.</strong>
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">💡</span>Analoji: Türkiye A.Ş. Yönetim Kurulu</h6>
+          <p style="text-align: justify;" class="text-sm">Bir milletvekilini, Türkiye A.Ş.'nin yönetim kurulu üyesi gibi düşünün. Kendisi belki "İzmir Şubesi" tarafından seçilip yönetim kuruluna gönderilmiş olabilir, ancak yönetim kuruluna oturduğu an, artık sadece İzmir Şubesi'nin değil, tüm şirketin çıkarları için çalışmak zorundadır. Bu ilkeye "temsilde genellik" veya "emredici vekalet yasağı" denir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 81 -->
+<details id="madde-81" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 81 – Andiçme
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            "Devletin varlığı ve bağımsızlığını, <strong>vatanın ve milletin bölünmez bütünlüğünü</strong>, <strong>milletin kayıtsız ve şartsız egemenliğini</strong> koruyacağıma; <strong>hukukun üstünlüğüne, demokratik ve laik Cumhuriyete ve Atatürk ilke ve inkılaplarına</strong> bağlı kalacağıma; toplumun huzur ve refahı, milli dayanışma ve adalet anlayışı içinde herkesin <strong>insan haklarından ve temel hürriyetlerden yararlanması</strong> ülküsünden ve <strong>Anayasaya sadakattan</strong> ayrılmayacağıma; büyük Türk milleti önünde namusum ve şerefim üzerine andiçerim".
+        </blockquote>
+         <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi:</h6>
+          <p style="text-align: justify;" class="text-sm">Yeminin tam metnini ezberlemeniz beklenmez. Ancak, yeminin içinde hangi temel ilkelerin yer aldığını bilmeniz önemlidir. Bir "aşağıdakilerden hangisi milletvekili andında yer almaz?" sorusuyla karşılaşabilirsiniz. Yukarıda vurgulanan temel kavramları bilmeniz yeterlidir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 82 -->
+<details id="madde-82" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 82 – Üyelikle Bağdaşmayan İşler
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyeleri, <strong>Devlet ve diğer kamu tüzel kişilerinde</strong> ve bunlara bağlı kuruluşlarda; Devletin veya diğer kamu tüzelkişilerinin doğrudan doğruya ya da dolaylı olarak katıldığı teşebbüs ve ortaklıklarda; <strong>kamu yararına çalışan derneklerin ve Devletten yardım sağlayan ve vergi muafiyeti olan vakıfların, kamu kurumu niteliğindeki meslek kuruluşları ile sendikalar</strong> ve bunların üst kuruluşlarının ve katıldıkları teşebbüs veya ortaklıkların yönetim ve denetim kurullarında görev alamazlar, vekili olamazlar, herhangi bir <strong>taahhüt işini doğrudan veya dolaylı olarak kabul edemezler, temsilcilik ve hakemlik yapamazlar.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyeleri, <strong>yürütme organının teklif, inha, atama veya onamasına bağlı Resmî veya özel herhangi bir işle görevlendirilemezler.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyeliği ile bağdaşmayan diğer görev ve işler kanunla düzenlenir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde, milletvekilliği göreviyle çıkar çatışması yaratabilecek veya görevi aksatabilecek işleri yasaklar. Amaç, milletvekilinin tüm mesaisini yasama faaliyetine ayırmasını ve makamını kişisel çıkar için kullanmasını engellemektir. Yürütme tarafından atanamama yasağı, kuvvetler ayrılığının bir gereğidir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 83 -->
+<details id="madde-83" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 83 – Yasama Dokunulmazlığı
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyeleri, <strong>Meclis çalışmalarındaki oy ve sözlerinden, Mecliste ileri sürdükleri düşüncelerden</strong> (...) bunları Meclis dışında tekrarlamak ve açığa vurmaktan <strong>sorumlu tutulamazlar.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Seçimden önce veya sonra bir suç işlediği ileri sürülen bir milletvekili, <strong>Meclisin kararı olmadıkça tutulamaz, sorguya çekilemez, tutuklanamaz ve yargılanamaz.</strong> <strong>Ağır cezayı gerektiren suçüstü hali</strong> ve seçimden önce soruşturmasına başlanılmış olmak kaydıyla <strong>Anayasanın 14 üncü maddesindeki durumlar</strong> bu hükmün dışındadır. Ancak, bu halde yetkili makam durumu hemen ve doğrudan doğruya Türkiye Büyük Millet Meclisine bildirmek zorundadır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyesi hakkında, seçiminden önce veya sonra verilmiş bir ceza hükmünün yerine getirilmesi, üyelik sıfatının sona ermesine bırakılır; üyelik süresince zamanaşımı işlemez.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Tekrar seçilen milletvekili hakkında soruşturma ve kovuşturma, Meclisin yeniden dokunulmazlığını kaldırmasına bağlıdır.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisindeki <strong>siyasi parti gruplarınca, yasama dokunulmazlığı ile ilgili görüşme yapılamaz ve karar alınamaz.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Karşılaştırmalı Analiz: Milletvekilinin Çift Katmanlı Zırhı</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">Sınavda bu ikisini ayırt etmek hayati önem taşır:</p>
+          <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2">Kriter</th><th class="border border-slate-300 p-2">YASAMA SORUMSUZLUĞU (Kürsü Dokunulmazlığı)</th><th class="border border-slate-300 p-2">YASAMA DOKUNULMAZLIĞI (Nispi Dokunulmazlık)</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-slate-300 p-2 font-medium">Neyi Korur?</td><td class="border border-slate-300 p-2">Meclis'teki <strong>oy, söz ve düşünceleri</strong>.</td><td class="border border-slate-300 p-2">Seçimden önce/sonra işlenen <strong>suç iddialarını</strong> (Ceza Davaları).</td></tr>
+                    <tr class="bg-slate-50"><td class="border border-slate-300 p-2 font-medium">Niteliği?</td><td class="border border-slate-300 p-2"><strong>MUTLAK'tır</strong>. Kaldırılamaz.</td><td class="border border-slate-300 p-2"><strong>NİSPİ'dir</strong>. Kaldırılabilir, istisnaları vardır.</td></tr>
+                    <tr><td class="border border-slate-300 p-2 font-medium">Süresi?</td><td class="border border-slate-300 p-2"><strong>SÜREKLİ'dir</strong>. Vekillik bitse bile ömür boyu korur.</td><td class="border border-slate-300 p-2"><strong>GEÇİCİ'dir</strong>. Sadece vekillik süresince korur.</td></tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+    </div>
+</details>
+                <!-- Madde 84 -->
+<details id="madde-84" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 84 – Milletvekilliğinin Düşmesi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            İstifa eden milletvekilinin milletvekilliğinin düşmesi, istifanın geçerli olduğu Türkiye Büyük Millet Meclisi Başkanlık Divanınca tespit edildikten sonra, <strong>Türkiye Büyük Millet Meclisi Genel Kurulunca kararlaştırılır.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Milletvekilliğinin kesin hüküm giyme veya kısıtlanma halinde düşmesi, bu husustaki <strong>kesin mahkeme kararının Genel Kurula bildirilmesiyle olur.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            82 nci maddeye göre milletvekilliğiyle bağdaşmayan bir görev veya hizmeti sürdürmekte ısrar eden milletvekilinin milletvekilliğinin düşmesine, yetkili komisyonun bu durumu tespit eden raporu üzerine <strong>Genel Kurul gizli oyla karar verir.</strong>
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Meclis çalışmalarına özürsüz veya izinsiz olarak bir ay içerisinde toplam beş birleşim günü katılmayan milletvekilinin milletvekilliğinin düşmesine, durumun Meclis Başkanlık Divanınca tespit edilmesi üzerine, <strong>Genel Kurulca üye tamsayısının salt çoğunluğunun oyuyla karar verilebilir.</strong>
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">📊</span>Karşılaştırmalı Tablo: Milletvekilliğini Düşüren Haller ve Usulleri</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">Her düşme sebebinin farklı bir usule tabi olması, sınavların en sevdiği soru tipidir.</p>
+          <div class="overflow-x-auto">
+            <table class="w-full text-sm border-collapse">
+                 <thead><tr class="bg-slate-100"><th class="border border-slate-300 p-2">Düşme Sebebi</th><th class="border border-slate-300 p-2">Karar Mekanizması</th><th class="border border-slate-300 p-2">TBMM Oylaması</th></tr></thead>
+                 <tbody class="bg-white">
+                    <tr><td class="border border-slate-300 p-2">İstifa</td><td class="border border-slate-300 p-2">Genel Kurul Kararı</td><td class="border border-slate-300 p-2">✅ Var (Basit Çoğunluk)</td></tr>
+                    <tr class="bg-slate-50"><td class="border border-slate-300 p-2">Kesin Hüküm Giyme / Kısıtlanma</td><td class="border border-slate-300 p-2">Mahkeme Kararının Bildirimi</td><td class="border border-slate-300 p-2">❌ <strong>Yok (Kendiliğinden Düşer)</strong></td></tr>
+                    <tr><td class="border border-slate-300 p-2">Üyelikle Bağdaşmayan İşi Sürdürme</td><td class="border border-slate-300 p-2">Genel Kurul Kararı (Gizli Oy)</td><td class="border border-slate-300 p-2">✅ Var (Basit Çoğunluk)</td></tr>
+                    <tr class="bg-slate-50"><td class="border border-slate-300 p-2">Devamsızlık (1 ayda 5 birleşim)</td><td class="border border-slate-300 p-2">Genel Kurul Kararı</td><td class="border border-slate-300 p-2">✅ Var (<strong>Üye Tamsayısının Salt Çoğunluğu - 301 Oy</strong>)</td></tr>
+                </tbody>
+            </table>
+          </div>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 85 -->
+<details id="madde-85" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 85 – İptal İstemi
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Yasama dokunulmazlığının kaldırılmasına veya milletvekilliğinin düşmesine 84 üncü maddenin birinci, üçüncü veya dördüncü fıkralarına göre karar verilmiş olması hallerinde, Meclis Genel Kurulu kararının alındığı tarihten başlayarak <strong>yedi gün içerisinde</strong> ilgili milletvekili veya bir diğer milletvekili, kararın, Anayasaya, kanuna veya İçtüzüğe aykırılığı iddiasıyla iptali için <strong>Anayasa Mahkemesine başvurabilir.</strong> Anayasa Mahkemesi, iptal istemini <strong>onbeş gün içerisinde</strong> kesin karara bağlar.
+        </blockquote>
+        <div class="warning-box mt-4">
+            <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">⚠️</span>Sınavdaki En Büyük Tuzak!</h6>
+            <p style="text-align: justify;" class="text-sm">Milletvekilliğinin düşmesiyle ilgili TÜM kararlara karşı Anayasa Mahkemesi'ne gidilemez! AYM denetimine kapalı olan bir durum vardır:<br>
+            <strong>Kesin hüküm giyme veya kısıtlanma (Md. 84/2)</strong> sebebiyle milletvekilliğinin düşmesi, bir Meclis kararı değil, mahkeme kararının bir sonucu olduğu için bu duruma karşı AYM'ye başvurulamaz. Sadece <strong>istifa, bağdaşmayan görev ve devamsızlık</strong> kararlarına karşı gidilebilir.</p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 86 -->
+<details id="madde-86" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 86 – Ödenek ve Yolluklar
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyelerinin ödenek, yolluk ve emeklilik işlemleri kanunla düzenlenir. <strong>Ödeneğin aylık tutarı en yüksek Devlet memurunun almakta olduğu miktarı, yolluk da ödenek miktarının yarısını aşamaz.</strong> (...)
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisi üyelerine ödenecek ödenek ve yolluklar, kendilerine T.C. Emekli Sandığı tarafından bağlanan emekli aylığı ve benzeri ödemelerin kesilmesini gerektirmez.
+        </blockquote>
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300 mt-3" style="text-align: justify;">
+            Ödenek ve yollukların en çok üç aylığı önceden ödenebilir.
+        </blockquote>
+        <div class="highlight-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">🧠</span>Uzman Eğitmen Analizi:</h6>
+          <p style="text-align: justify;" class="text-sm">Bu madde milletvekillerinin mali haklarını düzenler. En önemli noktası, vekil maaşının bir üste sınırı olduğudur: <strong>En yüksek devlet memuru maaşı.</strong></p>
+        </div>
+    </div>
+</details>
+
+<!-- Madde 87 -->
+<details id="madde-87" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+    <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+        <span class="mr-3 text-xl">📘</span> Madde 87 – Türkiye Büyük Millet Meclisinin Görev ve Yetkileri
+    </summary>
+    <div class="px-4 pb-4 mt-2 border-t pt-4">
+        <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+            Türkiye Büyük Millet Meclisinin görev ve yetkileri, <strong>kanun koymak, değiştirmek ve kaldırmak</strong>; <strong>bütçe ve kesinhesap kanun tekliflerini görüşmek ve kabul etmek</strong>; <strong>para basılmasına</strong> ve <strong>savaş ilânına karar vermek</strong>; <strong>milletlerarası andlaşmaların onaylanmasını uygun bulmak</strong>, Türkiye Büyük Millet Meclisi <strong>üye tamsayısının beşte üç çoğunluğunun kararı ile genel ve özel af ilânına karar vermek</strong> ve Anayasanın diğer maddelerinde öngörülen yetkileri kullanmak ve görevleri yerine getirmektir.
+        </blockquote>
+        <div class="strategy-box mt-4">
+          <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: TBMM'nin Görevleri Listesi</h6>
+          <p style="text-align: justify;" class="text-sm mb-3">Bu liste, "Aşağıdakilerden hangisi TBMM'nin görev ve yetkilerinden biri değildir?" sorularının ana kaynağıdır. Görevleri şu şekilde gruplayabilirsiniz:</p>
+          <ul class="list-disc pl-5 text-sm space-y-1">
+            <li><strong>Yasama:</strong> Kanun koymak, değiştirmek, kaldırmak.</li>
+            <li><strong>Bütçe ve Mali:</strong> Bütçe ve kesinhesap kanunlarını kabul etmek, para basılmasına karar vermek.</li>
+            <li><strong>Savaş ve Uluslararası İlişkiler:</strong> Savaş ilânına karar vermek, milletlerarası andlaşmaları uygun bulmak.</li>
+            <li><strong>Özel Nitelikli Kararlar:</strong> Genel ve özel af ilânına karar vermek (<strong>Nitelikli çoğunluk: 3/5 - 360 MV</strong>).</li>
+          </ul>
+        </div>
+    </div>
+</details>
                 
 </section>
  
